sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:10: error: illegal start of statement
      else {  
      ^