sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort()  {
  var n = getNombreValeurs();
  var parcours = true;
  while (parcours) {
    parcours=false
  	for (i<-0 to n-2) {
    	if (getValeur(i)<getValeur(i+1) & getValeur(i+1)<getValeur(i+2)) {
        
      else {  
      	echange(i,i+1)
        parcours=true
      }
      
    }
  }
}
}